WIP: working domain create (my) with contacts. Unit tests added.
